cmake_minimum_required(VERSION 3.20)
project(Vector)

set(CMAKE_CXX_STANDARD 17)

add_executable(Vector "2.1.cpp"
        "../Data Structures/Упражнения/Vector problems/P01.cpp"
        "../Data Structures/Упражнения/Vector problems/P02.cpp"
        "../Data Structures/Упражнения/Vector problems/P03.cpp"
        "../Data Structures/Упражнения/List problems/P01.cpp"
        "../Data Structures/Упражнения/P05 List Propblems/P01.cpp")